package com.github.yck.pattern.structural.flyweight.circle;

public interface Shape {
    void draw();
}
